<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1">

    <com.straw.lession.physical.custom.CircleImageView
        android:layout_width="@dimen/dimen_120dp"
        android:layout_height="@dimen/dimen_120dp"
        android:src="@mipmap/ic_launcher"
        android:layout_marginBottom="@dimen/dimen_30dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dimen_120dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:background="@color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/login_fieldarea_bg_shape"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_15dp"
                android:layout_marginRight="@dimen/dimen_15dp"
                android:src="@mipmap/login_user_icon" />

            <com.straw.lession.physical.custom.ClearEditText
                android:id="@+id/userNameEdit"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:background="@color/transparent"
                android:hint="@string/login_user"
                android:inputType="number"
                android:maxLength="11"
                android:textColor="@color/white"
                android:textColorHint="@color/white_fcfdfe"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/font_size_16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/login_fieldarea_bg_shape"
            android:gravity="center_vertical"
            android:orientation="horizontal" android:layout_marginTop="@dimen/dimen_10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_15dp"
                android:layout_marginRight="@dimen/dimen_15dp"
                android:src="@mipmap/login_password_icon" />

            <com.straw.lession.physical.custom.ClearEditText
                android:id="@+id/passwordEdit"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:background="@color/transparent"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white_fcfdfe"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/font_size_16" />
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:background="@drawable/button_blue_selector"
        android:text="@string/login_text"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_20" />

    <Button
        android:id="@+id/reg"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@drawable/button_reg_selector"
        android:text="@string/reg_text"
        android:textColor="@drawable/font_text_selector"
        android:textSize="@dimen/font_size_20"
        android:visibility="gone" />

    <TextView
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@color/transparent"
        android:gravity="center"
        android:text="@string/forget_text"
        android:textColor="@color/gray_959595"
        android:textSize="@dimen/font_size_16"
        android:visibility="gone" />

</LinearLayout>